test_scores/negative_dimers/features/Q12797.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q12797.pkl.xz